--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
     
-    <audio id="audio" src="/media/mao.mp3"></audio>
+    <audio id="audio" src="media/mao.mp3"></audio>
 
 <div class="all">
 
@@ -39,7 +39,7 @@
 
 
 <button id="catbtn">
-    <img id="cat" src="/media/image copy.png" width="260vw">
+    <img id="cat" src="media/image copy.png" width="260vw">
 </button>
 
 <div id="rev-container">
