--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="hkhggi.css">
-    <link rel="icon" type="image/x-icon" href="/media/image.png">
+    <link rel="icon" type="image/x-icon" href="media/image.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,7 +43,7 @@
 </button>
 
 <div id="rev-container">
-<img id="rev" src="/media/rev.png">
+<img id="rev" src="media/rev.png">
 <i id="magic">X</i>
 </div>
 
